@@ -1,0 +1,16 @@
+#' Grades Data Set
+#'
+#' A dataset containing common grades.
+#'
+#' @details
+#' \itemize{
+#'   \item x. The graphic representation of the grade
+#'   \item y. The meaning of the grade
+#' }
+#'
+#' @docType data
+#' @keywords datasets
+#' @name grades
+#' @usage data(grades)
+#' @format A data frame with 15 rows and 2 variables
+NULL
