@@ -1,0 +1,18 @@
+#' Ratings Data Set
+#'
+#' A dataset containing common ratings.
+#'
+#' @details
+#' \itemize{
+#'   \item x. The graphic representation of the rating
+#'   \item y. The meaning of the rating
+#' }
+#'
+#' @docType data
+#' @keywords datasets
+#' @name ratings
+#' @usage data(ratings)
+#' @format A data frame with 35 rows and 2 variables
+NULL
+
+
