@@ -6,3 +6,4 @@
 #' @aliases lexicon package-lexicon
 NULL
 
+
